[2단계 - 자동차 경주 구현] 알파카(최휘용) 미션 제출합니다. (#793)
* rename: RacingController 클래스의 이름을 RacingGame으로 변경

* fix: createCars의 잘못된 예외 처리 부분 수정

* refactor: ConsoleReader 클래스의 패키지를 util로 변경

* refactor: 이름에 대한 validateNotNull 메서드와 trim의 책임을 InputView로 이동

* refactor: Car에서 불필요하게 사용하는 trim 메서드 삭제

* refactor: Car.result 메서드를 삭제하고 getName과 getPosition으로 처리하도록 수정

* refactor: 기존에 한 클래스 내에서 관리하던 상수인 Constant와 ExceptionMessage를 삭제하고 각 클래스 내에서 처리

* refactor: RandomNumberGenerator 클래스를 service 패키지에서 util 패키지로 이동